<resources>
    <string name="app_name">July_19</string>
    <string name="title">Title</string>
    <string name="lines">Lines</string>
    <string name="author">Author</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cpu_model">CPU MODEL</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="name">Name</string>
    <string name="hard_disk_size">Hard Disk Size</string>
    <string name="submit">submit</string>
    <string name="post">Post</string>
    <string name="formTitle">Form Title</string>
    <string name="job">Job</string>
    <string name="createdAt">CreatedAt</string>
    <string name="id">Id</string>
    <string name="Delete">Delete</string>
    <string name="put">Put</string>
    <string name="patch">Patch</string>
    <string name="get">Get</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>